Add create block interface. Doesn't quite work, but test is in place.

--- a/tests/suites.cfg
+++ b/tests/suites.cfg
@@ -3,5 +3,4 @@
 #----------------------------------------------------------------------------#
 
 [external]
-create_block
-reformat_block
+create_block_single_line
