--- a/tests/suites.cfg
+++ b/tests/suites.cfg
@@ -2,6 +2,16 @@
 # Set test suites                                                            #
 #----------------------------------------------------------------------------#
 
-[external]
+[simple]
 create_block_single_line
 create_block_single_mapping
+
+[config]
+create_block_config_width
+create_block_config_style
+create_block_style_errs
+create_block_config_errs
+
+[external]
+.[simple]
+.[config]
