--- a/tests/suites.cfg
+++ b/tests/suites.cfg
@@ -12,6 +12,7 @@ create_block_config_width
 create_block_config_style
 create_block_style_errs
 create_block_config_errs
+create_block_indented_style
 
 [external]
 .[simple]
