--- a/tests/suites.cfg
+++ b/tests/suites.cfg
@@ -8,6 +8,7 @@ create_block_single_line
 create_block_single_mapping
 
 [config]
+create_block_config_column
 create_block_config_errs
 create_block_config_style
 create_block_config_width
