--- a/tests/suites.cfg
+++ b/tests/suites.cfg
@@ -9,14 +9,18 @@ create_block_single_mapping
 
 [config]
 create_block_config_column
-create_block_config_errs
 create_block_config_style
 create_block_config_width
 create_block_indented_column
 create_block_indented_style
 create_block_indented_width
+
+[errors]
+create_block_config_errs
 create_block_style_errs
+create_too_short
 
 [external]
 .[config]
+.[errors]
 .[simple]
