Add first reformat tests.

--- a/tests/suites.cfg
+++ b/tests/suites.cfg
@@ -2,13 +2,13 @@
 # Set test suites                                                            #
 #----------------------------------------------------------------------------#
 
-[simple]
+[create_simple]
 create_block_indented
 create_block_multiline
 create_block_single_line
 create_block_single_mapping
 
-[config]
+[create_config]
 create_block_config_column
 create_block_config_style
 create_block_config_width
@@ -16,12 +16,17 @@ create_block_indented_column
 create_block_indented_style
 create_block_indented_width
 
+[reformat_simple]
+reformat_command
+reformat_mapping
+
 [errors]
 create_block_config_errs
 create_block_style_errs
 create_too_short
 
 [external]
-.[config]
+.[create_config]
+.[create_simple]
 .[errors]
-.[simple]
+.[reformat_simple]
