Add test for reformatting multiple comment arrangements.

--- a/tests/suites.cfg
+++ b/tests/suites.cfg
@@ -19,6 +19,7 @@ create_block_indented_width
 [reformat_simple]
 reformat_command
 reformat_mapping
+reformat_styles
 
 [errors]
 create_block_config_errs
