Add test reformatting at different points in a block.

--- a/tests/suites.cfg
+++ b/tests/suites.cfg
@@ -20,6 +20,7 @@ create_block_indented_width
 reformat_command
 reformat_mapping
 reformat_styles
+reformat_5_lines
 
 [errors]
 create_block_config_errs
