Add some more reformat tests.

--- a/tests/suites.cfg
+++ b/tests/suites.cfg
@@ -22,6 +22,8 @@ reformat_mapping
 reformat_styles
 reformat_5_lines
 reformat_column
+reformat_indented_width
+reformat_indented_column
 
 [errors]
 create_block_config_errs
