Rearranged some bits of tests.

--- a/tests/suites.cfg
+++ b/tests/suites.cfg
@@ -19,19 +19,34 @@ create_block_indented_width
 [reformat_simple]
 reformat_command
 reformat_mapping
-reformat_styles
 reformat_5_lines
 reformat_column
+
+[reformat_config]
 reformat_indented_width
 reformat_indented_column
+reformat_styles
+
+[paragraph]
+#paragraph_before
+#paragraph_after
+#paragraph_both
 
 [errors]
 create_block_config_errs
 create_block_style_errs
 create_too_short
 
-[external]
-.[create_config]
+[create]
 .[create_simple]
-.[errors]
+.[create_config]
+
+[reformat]
 .[reformat_simple]
+.[reformat_config]
+
+[all]
+.[create]
+.[reformat]
+.[errors]
+.[paragraph]
