Add test for reformat with indented styles.

--- a/tests/input/indented_comments.in
+++ b/tests/input/indented_comments.in
@@ -21,6 +21,14 @@
     /********************/
     /* Spaced comment   */
     /********************/
+-- CASE 6 --
+#********************#
+#* Perl comment     *#
+#********************#
+-- CASE 7 --
+    #********************#
+    #* Perl comment     *#
+    #********************#
 ==============================================================================
 -- End of Input --
 
