--- a/tests/suites.cfg
+++ b/tests/suites.cfg
@@ -26,6 +26,7 @@ reformat_column
 reformat_indented_width
 reformat_indented_column
 reformat_styles
+reformat_indented_style
 
 [paragraph]
 #paragraph_before
