Add CommentablePreserve tests.

--- a/tests/suites.cfg
+++ b/tests/suites.cfg
@@ -28,10 +28,10 @@ reformat_indented_column
 reformat_styles
 reformat_indented_style
 
-[paragraph]
-#paragraph_before
-#paragraph_after
-#paragraph_both
+[preserve]
+reformat_preserve_before
+reformat_preserve_after
+reformat_preserve_both
 
 [errors]
 create_block_config_errs
@@ -50,4 +50,4 @@ create_too_short
 .[create]
 .[reformat]
 .[errors]
-.[paragraph]
+.[preserve]
