--- a/tests/input/multiline_comment.in
+++ b/tests/input/multiline_comment.in
@@ -27,5 +27,27 @@ In Englands green & pleasant Land
 Three lines of text here.
 /* They're already a comment? */
 Maybe haiku bug.
+-- CASE 4 --
+/***************************************/
+/* And did those feet in ancient time, */
+/* Walk upon Englands mountains green: */
+/* And was the holy Lamb of God,       */
+/* On Englands pleasant pastures seen! */
+/*                                     */
+/* And did the Countenance Divine,     */
+/* Shine forth upon our clouded hills? */
+/* And was Jerusalem builded here,     */
+/* Among these dark Satanic Mills?     */
+/*                                     */
+/* Bring me my Bow of burning gold;    */
+/* Bring me my Arrows of desire:       */
+/* Bring me my Spear: O clouds unfold! */
+/* Bring me my Chariot of fire!        */
+/*                                     */
+/* I will not cease from Mental Fight, */
+/* Nor shall my Sword sleep in my hand:*/
+/* Till we have built Jerusalem,       */
+/* In Englands green & pleasant Land   */
+/***************************************/
 ==============================================================================
 -- End of Input --
