Add paragraph intro parsing.

--- a/tests/suites.cfg
+++ b/tests/suites.cfg
@@ -33,6 +33,9 @@ create_block_config_errs
 create_block_style_errs
 create_too_short
 
+[paragraph]
+reformat_preserve_list
+
 [create]
 .[create_simple]
 .[create_config]
@@ -45,3 +48,4 @@ create_too_short
 .[create]
 .[reformat]
 .[errors]
+.[paragraph]
