Use &commentstring as a fallback.
When Commentable{Block,Sub}Style is not set.

--- a/tests/suites.cfg
+++ b/tests/suites.cfg
@@ -7,6 +7,7 @@ create_block_indented
 create_block_multiline
 create_block_single_line
 create_block_single_mapping
+create_block_commentstring
 
 [create_config]
 create_block_config_column
