--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "vim-regressions"]
 	path = vim-regressions
-	url = github.com:galtish/vim-regressions
+	url = http://github.com/galtish/vim-regressions
