CommentableCreate has join functionality.

--- a/tests/suites.cfg
+++ b/tests/suites.cfg
@@ -17,6 +17,9 @@ create_block_indented_column
 create_block_indented_style
 create_block_indented_width
 
+[create_join]
+create_block_many
+
 [reformat_simple]
 reformat_command
 reformat_mapping
@@ -40,6 +43,7 @@ reformat_preserve_list
 [create]
 .[create_simple]
 .[create_config]
+.[create_join]
 
 [reformat]
 .[reformat_simple]
