Rephrase many tests.

--- a/tests/suites.cfg
+++ b/tests/suites.cfg
@@ -18,7 +18,8 @@ create_block_indented_style
 create_block_indented_width
 
 [create_join]
-create_block_many
+simple_join
+multilevel_join
 
 [reformat_simple]
 reformat_command
@@ -38,7 +39,7 @@ create_block_style_errs
 create_too_short
 
 [paragraph]
-reformat_preserve_list
+preserve_list_simple
 
 [create]
 .[create_simple]
