--- a/.editorconfig
+++ b/.editorconfig
@@ -18,6 +18,6 @@ max_line_length = 78
 trim_trailing_whitespace = false
 max_line_length = 77
 
-[tests/output/*]
+[test/output/*]
 trim_trailing_whitespace = false
 
