Multilevel reformat test

--- a/test/suites.cfg
+++ b/test/suites.cfg
@@ -26,6 +26,7 @@ reformat_command
 reformat_mapping
 reformat_5_lines
 reformat_column
+multilevel_reformat
 
 [reformat_config]
 reformat_indented_width
