--- a/test/input/comment_list.in
+++ b/test/input/comment_list.in
@@ -10,5 +10,16 @@
 /*    over 7 months.                    */
 /* 3: Wonder what on Earth I'm writing. */
 /****************************************/
+-- CASE 2 --
+/****************************************/
+/* This comment contains a list.        */
+/*                                      */
+/* 1: Really important!                 */
+/* 2: Wash the dog.                     */
+/*    1: Subpoint 1.                    */
+/*    2: Subpoint 2.                    */
+/*    3: Subpoint 3.                    */
+/* 3: This list is less useful.         */
+/****************************************/
 ==============================================================================
 -- End of Input --
