--- a/test/input/comment_list.in
+++ b/test/input/comment_list.in
@@ -12,12 +12,13 @@
 /****************************************/
 -- CASE 2 --
 /****************************************/
-/* This comment contains a list.        */
+/* This comment contains nested lists.  */
 /*                                      */
 /* 1: Really important!                 */
 /* 2: Wash the dog.                     */
 /*    1: Subpoint 1.                    */
 /*    2: Subpoint 2.                    */
+/*      1: Mega-subpoint 1.             */
 /*    3: Subpoint 3.                    */
 /* 3: This list is less useful.         */
 /****************************************/
