Add regex matchers

--- a/test/suites.cfg
+++ b/test/suites.cfg
@@ -33,6 +33,7 @@ reformat_indented_width
 reformat_indented_column
 reformat_styles
 reformat_indented_style
+lisp_comments
 
 [errors]
 create_block_config_errs
