--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ before_script:
 
 script:
   - ./run-regressions --profiling --suite all
-  - LUA_PATH='./test/lua-modules/?.lua' ./test/combine-profiles.lua ./test/output/*.profile
+  - ./generate-profile-report
 
 after_failure:
   - ./test/print-diffs.sh
