Test which demonstrates the problem with unicode

--- a/test/suites.cfg
+++ b/test/suites.cfg
@@ -27,6 +27,7 @@ reformat_mapping
 reformat_5_lines
 reformat_column
 multilevel_reformat
+unicode_formatting
 
 [reformat_config]
 reformat_indented_width
