--- a/test/suites.cfg
+++ b/test/suites.cfg
@@ -25,6 +25,7 @@ multilevel_join
 reformat_command
 reformat_mapping
 reformat_5_lines
+redo_ends
 reformat_column
 multilevel_reformat
 unicode_formatting
