--- a/test/input/short_comment.in
+++ b/test/input/short_comment.in
@@ -2,5 +2,8 @@
 ==============================================================================
 -- CASE 1 --
 /* trial comment */
+-- CASE 2 --
+/****************************************************************************/
+/****************************************************************************/
 ==============================================================================
 -- End of Input --
