--- a/test/suites.cfg
+++ b/test/suites.cfg
@@ -29,6 +29,7 @@ redo_ends
 reformat_column
 multilevel_reformat
 unicode_formatting
+reformat_empty
 
 [reformat_config]
 reformat_indented_width
@@ -45,6 +46,9 @@ create_too_short
 [paragraph]
 preserve_list_simple
 
+[other]
+check_comment
+
 [create]
 .[create_simple]
 .[create_config]
@@ -59,3 +63,4 @@ preserve_list_simple
 .[reformat]
 .[errors]
 .[paragraph]
+.[other]
